--- a/caller.html
+++ b/caller.html
@@ -83,5 +83,6 @@
   </div>
 
   <script src="caller.js"></script>
+  <script type="module" src="src/scripts/CallerAgoraCall.js"></script>
 </body>
 </html>
