--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 </div>
 
 <script type="module" src="src/main.js"></script>
+<script type="module" src="src/scripts/IndexAgoraCall.js"></script>
 <!-- Google Maps Embed iframe is used for the mini-map. Replace API_KEY in the iframe src with your Maps Embed API key. -->
 </body>
 </html>
