--- a/src/pages/testcall.html
+++ b/src/pages/testcall.html
@@ -4,37 +4,37 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
      <link rel="stylesheet" href="/src/stylesheets/stylecall.css">
-    <title>Sample HTML Document</title>     
+    <title>Agora Call Test Page</title>     
 </head>
 <body>
 <div class="forms-container">
-    <form>
-        <label for="ID">ID:</label>
-        <input type="text" id="ID" name="ID"><br><br>
+    <!-- Regular Call Test Form -->
+    <form id="regularCallForm">
+        <h2>Regular Call Test</h2>
+        <label for="regularCallID">User ID:</label>
+        <input type="text" id="regularCallID" name="ID" value="123"><br><br>
 
-        <label for="Channel">Channel:</label>
-        <input type="text" id="Channel" name="Channel"><br><br>
+        <label for="regularCallChannel">Channel Name:</label>
+        <input type="text" id="regularCallChannel" name="Channel" value="test_channel"><br><br>
 
         <div class="button-group">
-            <button type="submit" name="action" value="join">Join</button>
-            <button type="submit" name="action" value="leave">Leave</button>
+            <button type="button" id="joinRegularCall">Join Regular Call</button>
+            <button type="button" id="leaveRegularCall">Leave Regular Call</button>
         </div>
     </form>
 
-    <form>
-        <label for="ID">ID:</label>
-        <input type="text" id="ID" name="ID"><br><br>
-
-        <label for="Channel">Channel:</label>
-        <input type="text" id="Channel" name="Channel"><br><br>
-
+    <!-- AI Agent Call Section -->
+    <div class="ai-agent-section">
+        <h2>AI Agent Call</h2>
+        <p>Join an active channel with a Conversational AI agent.</p>
         <div class="button-group">
-            <button type="submit" name="action" value="join">Join</button>
-            <button type="submit" name="action" value="leave">Leave</button>
+            <button type="button" id="joinAiAgentCallBtn">Join AI Agent Call</button>
+            <button type="button" id="leaveAiAgentCallBtn" disabled>Leave AI Agent Call</button>
         </div>
-    </form>
+    </div>
 </div>
 
 <script type="module" src="/src/scripts/ScriptTestCall.js"></script>
+<script type="module" src="/src/scripts/TestCallConversationalAI.js"></script>
 </body>
 </html>
